# smpa-backend

./: .codacy.yaml  .dockerignore  .gitignore  README.md  SmPA.paw  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  screens.md  screens_api.md  setup.cfg
app/: .coverage  .konchrc  coverage.xml  pyproject.toml  setup.cfg  wsgi.py
app/smpa/: app.py  config.toml  conftest.py  routes.py
app/smpa/config/: defaults.py  settings.py
app/smpa/db/documentdb/: connection.py  registry.py
app/smpa/db/rdb/: connection.py  registry.py
app/smpa/helpers/: auth.py  console.py  document_db.py  notifications.py  s3.py  startup.py  swagger.py
app/smpa/helpers/govnotify/: client.py
app/smpa/helpers/govpay/: client.py
app/smpa/models/: address.py  application.py  core.py  document.py  material.py  meta.py  payment.py  planning.py  proposal.py  site.py  tmp.py  user.py  work.py
app/smpa/openapi/schematics/: __init__.py  common.py  openapi.py
app/smpa/rdb/: connection.py  registry.py
app/smpa/resources/: __init__.py  address.py  application.py  auth.py  core.py  document.py  material.py  meta.py  payment.py  proposal.py  unit.py  user.py  work.py
app/smpa/schemas/: document.py
app/smpa/services/: __init__.py  address.py  application.py  core.py  document.py  material.py  meta.py  mongo.py  payment.py  proposal.py  rethink.py  site.py  tmp.py  unit.py  user.py  work.py
app/smpa/static/swagger/: index.html
app/smpa/tests/: test_0_config.py  test_accounts.py  test_address.py  util.py
app/smpa/tests/fixtures/: address.py  app.py  auth.py  user.py
(+174 files in other folders)
