[tool.poetry]
name = "SMPA"
version = "0.5.0"
description = "Submit my Planning Application API backend"
authors = ["Hactar <systems@hactar.is>"]

[tool.poetry.dependencies]
python = "^3.6"
arrow = "^0.13.2"
cryptography = "^2.6"
envkey = "^1.2"
falcon = "^2.0"
falcon-apispec = "^0.1.0"
gunicorn = "^19.9"
httpie = "^1.0"
ipython = "^7.5"
inflection = "^0.3.1"
jsonschema = "^3.0"
konch = "^4.2"
marshmallow = "^2.19"
rethinkdb = "^2.4"
schematics = "^2.1"
schematics-apispec = "^0.0.1"
simplejson = "^3.16"
slugify = "^0.0.1"
ujson = "^1.35"
uWSGI = "^2.0"
waitress = "^1.3"
wsgicors = "^0.7.0"
passlib = {version = "^1.7",extras = ["bcrypt"]}
falcon-auth = {version = "^1.1",extras = ["backend-hawk", "backend-jwt"]}


[tool.poetry.dev-dependencies]
pdbpp = "^0.10.0"
ipdb = "^0.12"
mixer = "^6.1.3"
pytest = "^4.5.0"
pytest-cov = "^2.7.1"
pytest-falcon = "^0.4.2"
pytest-sugar = "^0.9.2"
pytest-variables = {version = "^1.7.1", extras = ["hjson"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
